# mobileAdapt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  api.py  main.py  mobileadapt.py  pyproject.toml  requirements.txt  setup.py
.github/: release.yml
.github/workflows/: package.yml
cognisim/: __init__.py
cognisim/device/: device.py  device_factory.py  ios_device.py
cognisim/device/android/: android_device.py  android_ui.py  android_view_hierarchy.py
cognisim/device/ios/: ios_device.py  ios_view_hierarchy.py
cookbook/: agentic_example.py  examplescript.py  examplescript2.py  smoke_example_android.py.py  smoke_example_ios.py
deploy/: run.sh
device/: android_device.py  android_view_hierarchy.xml  device_factory.py
device/android/: android_device.py  android_view_hierarchy.py
example-scripts/: examplescript.py  examplescript2.py  run_android.py
mobileadapt/: __init__.py  mobileadapt.py
mobileadapt/device/: android_device.py  android_view_hierarchy.py  device_factory.py  ios_device.py
mobileadapt/device/android/: android_device.py  android_ui.py  android_view_hierarchy.py
mobileadapt/utils/: constants.py
scripts/: format.sh  setup.sh
testing/: run_android.py
